--- a/CQSS.Pay.BLL/CQSS.Pay.BLL.csproj
+++ b/CQSS.Pay.BLL/CQSS.Pay.BLL.csproj
@@ -56,11 +56,25 @@
     <Compile Include="Allinpay\AllinpayManager.cs" />
     <Compile Include="Allinpay\Api\AllinpayData.cs" />
     <Compile Include="Allinpay\Api\AllinpayCore.cs" />
-    <Compile Include="Basic\PayRefundManager.cs" />
-    <Compile Include="Basic\PayRequestManager.cs" />
-    <Compile Include="Basic\PayResultManager.cs" />
     <Compile Include="Basic\SignManager.cs" />
+    <Compile Include="Builder.cs" />
+    <Compile Include="Cache\AppCache.cs" />
+    <Compile Include="Interface\IPayBase.cs" />
+    <Compile Include="Interface\IPayRequest.cs" />
+    <Compile Include="Interface\IPayResult.cs" />
+    <Compile Include="Interface\IRefundRequest.cs" />
+    <Compile Include="Interface\IRefundResult.cs" />
+    <Compile Include="Manager\PayBase.cs" />
+    <Compile Include="Manager\PayRequest.cs" />
+    <Compile Include="Manager\PayResult.cs" />
+    <Compile Include="Manager\RefundRequest.cs" />
+    <Compile Include="Manager\RefundResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwfitPass\Api\MD5Util.cs" />
+    <Compile Include="SwfitPass\Api\SwiftPassCore.cs" />
+    <Compile Include="SwfitPass\Api\SwiftPassPayApi.cs" />
+    <Compile Include="SwfitPass\Api\PayHttpClient.cs" />
+    <Compile Include="SwfitPass\Api\SwiftPassConfig.cs" />
     <Compile Include="WeChatPay\Api\JsApiPay.cs" />
     <Compile Include="WeChatPay\Api\WxPayLog.cs" />
     <Compile Include="WeChatPay\Api\MicroPay.cs" />
