--- a/CQSS.Pay.Web/Web.config
+++ b/CQSS.Pay.Web/Web.config
@@ -4,7 +4,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CQSS" connectionString="database=CQSS_DEV;server=192.168.81.23;uid=sa;pwd=Cgit86136101;" providerName="System.Data.SqlClient"/>
+    <add name="CQSS" connectionString="database=CQSS_DEV;server=192.168.81.23;uid=sa;pwd=Cgit86136101;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -13,56 +13,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
     <!--默认的数据库连接名称-->
-    <add key="DefaultDatabase" value="CQSS"/>
-    <!--本站点域名-->
-    <add key="Domain" value="pay.sjgo365.com" />
-    <!--系统加密密钥-->
-    <add key="SignKey" value="CC73A89B-E4A4-4E84-9434-4619FE2B523A" />
-    <!--是否是测试模式 1.是 0.否-->
-    <add key="IsTestMode" value="0" />
-
-    <!--**************************支付宝配置 开始**************************-->
-    <!--合作者身份ID-->
-    <add key="AlipayPartner" value="2088311592776328" />
-    <!--合作者身份ID-->
-    <add key="AlipaySellerEmail" value="50529767@qq.com" />
-    <!--支付宝支付密钥-->
-    <add key="AlipayKey" value="he4fabvzpw74cd4fbiajxu8cahsi12mc"/>
-    <!--**************************支付宝配置 结束**************************-->
-
-    <!--**************************微信支付配置 开始**************************-->
-    <!--微信AppID-->
-    <add key="WeChatAppID" value="wx6043cc70250ccb00" />
-    <!--微信AppSecret-->
-    <add key="WeChatAppSecret" value="9ae0bbfaa86d1ab81842a41032685933" />
-    <!--微信商户号-->
-    <add key="WeChatMchID" value="1264062801" />
-    <!--微信商户支付密钥-->
-    <add key="WeChatPayKey" value="shuishen198311039138liuhang22222" />
-    <!--微信支付证书路径（应用程序下的相对路径）-->
-    <add key="WeChatPaySSLCertPath" value="cert\WeChatPay\apiclient_cert.p12" />
-    <!--微信支付证书密钥-->
-    <add key="WeChatPaySSLCertPassword" value="1264062801" />
-    <!--**************************微信支付配置 结束**************************-->
-
-    <!--**************************通联支付配置 开始**************************-->
-    <!--通联商户号-->
-    <add key="AllinpayMerchantId" value="109310231410002" />
-    <!--电商企业代码（10位海关代码）-->
-    <add key="AllinpayEshopEntCode" value="50052602BE" />
-    <!--电商企业名称（企业备案的企业全称）-->
-    <add key="AllinpayEshopEntName" value="重庆商社电子商务有限公司" />
-    <!--通联支付加密密钥-->
-    <add key="AllinpayKey" value="Sjgo365lh" />
-    <!--通联支付服务器网关地址-->
-    <add key="AllinpayServerUrl" value="https://service.allinpay.com/gateway/index.do" />
-    <!--通联WAP支付服务器网关地址-->
-    <add key="AllinpayWapServerUrl" value="http://service.allinpay.com/mobilepayment/mobile/SaveMchtOrderServlet.action" />
-    <!--通联退款服务器网关地址-->
-    <add key="AllinpayRefundServerUrl" value="https://service.allinpay.com/gateway/index.do" />
-    <!--通联支付证书路径（应用程序下的相对路径）-->
-    <add key="AllinpaySSLCertPath" value="cert\Allinpay\TLCert.cer" />
-    <!--**************************通联支付配置 结束**************************-->
+    <add key="DefaultDatabase" value="CQSS" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -77,8 +28,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30AD4FE6B2A6AEED" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -94,7 +45,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
