--- a/CQSS.Pay.Model/CQSS.Pay.Model.csproj
+++ b/CQSS.Pay.Model/CQSS.Pay.Model.csproj
@@ -44,16 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppEnum.cs" />
+    <Compile Include="BizException.cs" />
     <Compile Include="ExcuteResult.cs" />
-    <Compile Include="NotifyRecordInfo.cs" />
-    <Compile Include="PayNotifyInfo.cs" />
-    <Compile Include="PayOrderInfo.cs" />
-    <Compile Include="PayRefundInfo.cs" />
-    <Compile Include="PayRequestInfo.cs" />
-    <Compile Include="PayResultInfo.cs" />
+    <Compile Include="Data\NotifyBackInfo.cs" />
+    <Compile Include="Api\PayNotifyInfo.cs" />
+    <Compile Include="Api\PayOrderInfo.cs" />
+    <Compile Include="Data\PayRequestInfo.cs" />
+    <Compile Include="ParameterData.cs" />
+    <Compile Include="Data\PayResultInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RefundNotifyInfo.cs" />
-    <Compile Include="RefundOrderInfo.cs" />
+    <Compile Include="Api\RefundNotifyInfo.cs" />
+    <Compile Include="Api\RefundOrderInfo.cs" />
+    <Compile Include="Data\RefundRequestInfo.cs" />
+    <Compile Include="Data\RefundResultInfo.cs" />
     <Compile Include="SearchResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
