--- a/CQSS.Pay.Web/global.config
+++ b/CQSS.Pay.Web/global.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--本站点域名-->
-  <Domain>pay.sjgo365.com</Domain>
+  <Domain>pay.cqlezhan.com</Domain>
   <!--本站点网站名称-->
-  <WebSiteName>世纪购</WebSiteName>
+  <WebSiteName>谷谷香</WebSiteName>
   <!--是否是模拟支付模式 true.是 false.否-->
   <IsSimulateMode>false</IsSimulateMode>
   <!--是否是测试模式 true.是 false.否-->
@@ -45,7 +45,7 @@
   <!--电商企业代码（10位海关代码）-->
   <AllinpayEshopEntCode>50052602BE</AllinpayEshopEntCode>
   <!--电商企业名称（企业备案的企业全称）-->
-  <AllinpayEshopEntName>重庆商社电子商务有限公司</AllinpayEshopEntName>
+  <AllinpayEshopEntName>谷谷香餐饮集团有限公司</AllinpayEshopEntName>
   <!--通联支付加密密钥-->
   <AllinpayKey>Sjgo365lh</AllinpayKey>
   <!--通联支付服务器网关地址-->
