更改为mysql 数据库

--- a/CQSS.Pay.Web/Web.config
+++ b/CQSS.Pay.Web/Web.config
@@ -4,7 +4,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CQSS" connectionString="database=CQSS_DEV;server=192.168.81.23;uid=sa;pwd=Cgit86136101;" providerName="System.Data.SqlClient" />
+    <!--<add name="CQSS" connectionString="database=CQSS_DEV;server=192.168.81.23;uid=sa;pwd=Cgit86136101;" providerName="System.Data.SqlClient" />-->
+    <add name="CQSS" connectionString="database=ebs_test;server=112.74.83.55;uid=root;pwd=guguxiang@123;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
