--- a/CQSS.Pay.Web/global.config
+++ b/CQSS.Pay.Web/global.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <!--本站点域名-->
-  <Domain>pay.cqlezhan.com</Domain>
+  <!--本站点域名 pay.cqlezhan.com-->
+  <Domain>pay.test.cn</Domain>
   <!--本站点网站名称-->
   <WebSiteName>谷谷香</WebSiteName>
   <!--是否是模拟支付模式 true.是 false.否-->
-  <IsSimulateMode>false</IsSimulateMode>
+  <IsSimulateMode>true</IsSimulateMode>
   <!--是否是测试模式 true.是 false.否-->
   <IsTestMode>true</IsTestMode>
   <!--测试专用的AppId-->
